added a json reader in case you like the idea of sharing config between javascript client and backend

--- a/ConfigFactory/ConfigFactory.csproj
+++ b/ConfigFactory/ConfigFactory.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="ConfigFactory.TestConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConfigReader\ConfigReader.csproj">
