--- a/ConfigReader/ConfigReader.csproj
+++ b/ConfigReader/ConfigReader.csproj
@@ -34,12 +34,14 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettingsConfigReader.cs" />
     <Compile Include="ConfigFactory.cs" />
     <Compile Include="IConfigReader.cs" />
+    <Compile Include="JsonConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
