--- a/ConfigReader/ConfigReader.csproj
+++ b/ConfigReader/ConfigReader.csproj
@@ -39,8 +39,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettingsConfigReader.cs" />
+    <Compile Include="AppSettingsSettingProvider.cs" />
     <Compile Include="ConfigFactory.cs" />
+    <Compile Include="ConfigReader.cs" />
+    <Compile Include="IConfig.cs" />
     <Compile Include="IConfigReader.cs" />
+    <Compile Include="ISettingProvider.cs" />
     <Compile Include="JsonConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeExtensions.cs" />
