--- a/ConfigFactory/App.config
+++ b/ConfigFactory/App.config
@@ -4,22 +4,30 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="TestConfig.MyString" value="hello world" />
-    <add key="TestConfig.MyInt" value="123" />
-    <add key="TestConfig.MyDate" value="2013 12 08" />
-    <add key="TestConfig.MyDecimal" value="123.456" />
+    <add key="ConfigFactory.TestConfig.MyString" value="TestConfig from config: hello world" />
+    <add key="ConfigFactory.TestConfig.MyInt" value="123" />
+    <add key="ConfigFactory.TestConfig.MyDate" value="2013 12 08" />
+    <add key="ConfigFactory.TestConfig.MyDecimal" value="123.456" />
+             
+    <add key="ConfigFactory.TestConfig.MyCollection0" value="hello world1" />
+    <add key="ConfigFactory.TestConfig.MyCollection1" value="hello world2" />
+    <add key="ConfigFactory.TestConfig.MyCollection2" value="hello world3" />
+             
+    <add key="ConfigFactory.TestConfig.MyCollection10" value="hello world1" />
+    <add key="ConfigFactory.TestConfig.MyCollection11" value="hello world2" />
+    <add key="ConfigFactory.TestConfig.MyCollection12" value="hello world3" />
+             
+    <add key="ConfigFactory.TestConfig.MyCollection20" value="hello world1" />
+    <add key="ConfigFactory.TestConfig.MyCollection21" value="hello world2" />
+    <add key="ConfigFactory.TestConfig.MyCollection22" value="hello world3" />
+             
+    <add key="ConfigFactory.TestFieldConfig.MyString" value="hello world" />
 
-    <add key="TestConfig.MyCollection0" value="hello world1" />
-    <add key="TestConfig.MyCollection1" value="hello world2" />
-    <add key="TestConfig.MyCollection2" value="hello world3" />
+    <add key="ConfigFactory.TestAttributeConfig.MyDecimal" value="-666.123" />
+    <add key="ConfigFactory.TestAttributeConfig.MyString" value="hello attribute decoration" />
+    <add key="ConfigFactory.TestAttributeConfig.MyOtherString" value="hello world" />
 
-    <add key="TestConfig.MyCollection10" value="hello world1" />
-    <add key="TestConfig.MyCollection11" value="hello world2" />
-    <add key="TestConfig.MyCollection12" value="hello world3" />
-
-    <add key="TestConfig.MyCollection20" value="hello world1" />
-    <add key="TestConfig.MyCollection21" value="hello world2" />
-    <add key="TestConfig.MyCollection22" value="hello world3" />
+    <add key="ConfigFactory.TestPrivateAttributeConfig.MyString" value="hello TestPrivateAttributeConfig decoration" />
 
   </appSettings>
 </configuration>
