--- a/ConfigFactory/ConfigFactory.csproj
+++ b/ConfigFactory/ConfigFactory.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAttributeConfig.cs" />
     <Compile Include="TestConfig.cs" />
+    <Compile Include="TestFieldConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
