check date hydration

--- a/ConfigFactory/App.config
+++ b/ConfigFactory/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="ConfigFactory.TestConfig.MyString" value="TestConfig from config: hello world" />
     <add key="ConfigFactory.TestConfig.MyInt" value="123" />
-    <add key="ConfigFactory.TestConfig.MyDate" value="2013 12 08" />
+    <add key="ConfigFactory.TestConfig.MyDate" value="2013-12-08T13:55" />
     <add key="ConfigFactory.TestConfig.MyDecimal" value="123.456" />
              
     <add key="ConfigFactory.TestConfig.MyCollection0" value="hello world1" />
