add nuspec we are v1.0.1

--- a/ConfigReader/Radio7.ConfigReader.csproj
+++ b/ConfigReader/Radio7.ConfigReader.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Radio7.ConfigReader.nuspec" />
     <None Include="_CreateNewNuGetPackage\Config.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\New-NuGetPackage.ps1" />
