--- a/ConfigReader/Radio7.ConfigReader.csproj
+++ b/ConfigReader/Radio7.ConfigReader.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigReaders\AppSettingsConfigReader.cs" />
+    <Compile Include="ConfigReaders\MemberInfo.cs" />
     <Compile Include="ValueProviders\AppSettingsValueProvider.cs" />
     <Compile Include="ConfigAttribute.cs" />
     <Compile Include="ConfigFactory.cs" />
@@ -63,6 +64,7 @@
   <ItemGroup>
     <None Include="_CreateNewNuGetPackage\DoNotModify\NuGet.exe" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
