Respect TypeConverters on properties or fields. Better support for type conversion, now works with enum as well

--- a/ConfigFactory/App.config
+++ b/ConfigFactory/App.config
@@ -8,7 +8,11 @@
     <add key="ConfigFactory.TestConfig.MyInt" value="123" />
     <add key="ConfigFactory.TestConfig.MyDate" value="2013-12-08T13:55" />
     <add key="ConfigFactory.TestConfig.MyDecimal" value="123.456" />
-             
+
+    <add key="ConfigFactory.TestConfig.DateTimeConverted" value="magic" />
+    <add key="ConfigFactory.TestConfig.MyEnum" value="Value2" />
+
+
     <add key="ConfigFactory.TestConfig.MyCollection0" value="hello world1" />
     <add key="ConfigFactory.TestConfig.MyCollection1" value="hello world2" />
     <add key="ConfigFactory.TestConfig.MyCollection2" value="hello world3" />
