--- a/ConfigFactory/ConfigFactory.csproj
+++ b/ConfigFactory/ConfigFactory.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MagicalConverter.cs" />
+    <Compile Include="MyEnum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAttributeConfig.cs" />
