--- a/Radio7.COnfigReader.Tests/Radio7.ConfigReader.Tests.csproj
+++ b/Radio7.COnfigReader.Tests/Radio7.ConfigReader.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ConfigReaderTests.cs" />
     <Compile Include="MockValueProvider.cs" />
     <Compile Include="MyConfigPoco.cs" />
+    <Compile Include="MyValueConverter.cs" />
     <Compile Include="NullValueProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
