--- a/Radio7.COnfigReader.Tests/Radio7.ConfigReader.Tests.csproj
+++ b/Radio7.COnfigReader.Tests/Radio7.ConfigReader.Tests.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayValueTests.cs" />
     <Compile Include="ConfigReaderTests.cs" />
     <Compile Include="MockValueProvider.cs" />
     <Compile Include="MyConfigPoco.cs" />
